k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sc-mlops-api
  namespace: sc-mlops
spec:
  type: ClusterIP
  selector:
    app: sc-mlops-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
